<resources>
    <string name="app_name">App1DrewLawson</string>
    <string name="first_name">First Name</string>
    <string name="mid_name">Mid. Name</string>
    <string name="last_name">Last Name</string>
    <string name="take_picture">Take Picture</string>
    <string name="submit_text">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>